objects/LAT_BR_ClientChannelSegmentation2__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionário Segmentação</relationshipLabel>
        <relationshipName>Client_Segmentation_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beneficio_Fiscal__c</fullName>
        <label>Beneficio Fiscal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Canal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCreationSegm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First created segmentation (needed for first client creation)</description>
        <inlineHelpText>First created segmentation (needed for first client creation)</inlineHelpText>
        <label>ClientCreationSegm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_type__c</fullName>
        <label>Tipo de Cliente</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estrategia_comercial__c</fullName>
        <label>Estratégia Comercial</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FORMATO__c</fullName>
        <label>Formato</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POLiTICA_DE_PRECO__c</fullName>
        <label>Política de Preço</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIOR_DE_INVESTIMENTO__c</fullName>
        <label>Prioridade de Investimento</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perfil__c</fullName>
        <label>Perfil</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segmento</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Em Preenchimento</label>
                </value>
                <value>
                    <fullName>In Approval</fullName>
                    <label>Em Aprovação</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <label>Ativo</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <label>Inativo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_channel__c</fullName>
        <label>Sub Canal</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>q1_canal_negocio__c</fullName>
        <description>Qual Canal de atuação se destina o negócio?</description>
        <inlineHelpText>Qual Canal de atuação se destina o negócio?</inlineHelpText>
        <label>Qual Canal de atuação destina o negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acontecimento pode ser social, artístico ou desportivo, festas de pequeno, médio ou grande porte, que envolvem experiências diferenciadas ao público e possível vivência de marca.</fullName>
                </value>
                <value>
                    <fullName>Comércio eletrônico ou e-commerce como também é chamado. Realização de negócios no ambiente on-line, por meio de ferramentas eletrônicas. Podem ser atendidos Direta ou Indiretamente.</fullName>
                </value>
                <value>
                    <fullName>É um intermediário que terá a responsabilidade de entregar os produtos da empresa para o ponto de venda final (CNPJ). Canais utilizados para alcançar pontos de venda On-Trade, Off Trade e Eventos.</fullName>
                </value>
                <value>
                    <fullName>São Pontos de Vendas de alimentos e bebidas para consumo imediato, preparados por operadores (restaurantes, bares, casas noturnas, eventos, etc.) e consumido no próprio estabelecimento.</fullName>
                </value>
                <value>
                    <fullName>São Pontos de Vendas intermediários que fazem ligação direta com o Shopper ou consumidor final. Último negociante que liga fabricantes a consumidores para consumo ou venda posterior. Podem ser atendidos direta ou indiretamente.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q2_relacao_comercial__c</fullName>
        <description>Qual a nossa relação comercial com negócio?</description>
        <inlineHelpText>Qual a nossa relação comercial com negócio?</inlineHelpText>
        <label>Qual nossa relação comercial c\ negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q1_canal_negocio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>421-Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</fullName>
                </value>
                <value>
                    <fullName>422-Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</fullName>
                </value>
                <value>
                    <fullName>Cliente no qual emitimos pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>423-Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>PDV que apenas mantemos relação de atendimento, sem emissão de pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>621-Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</fullName>
                </value>
                <value>
                    <fullName>622-Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</fullName>
                </value>
                <value>
                    <fullName>623-Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>ONL-Cliente no qual emitimos pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>321-Cliente no qual emitimos pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>322-PDV que apenas mantemos relação de atendimento, sem emissão de pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>121-Cliente no qual emitimos pedidos e pagamentos (Dinheiro e &quot;ou&quot; Produtos).</fullName>
                </value>
                <value>
                    <fullName>Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</fullName>
                    <isActive>false</isActive>
                    <label>Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</label>
                </value>
                <value>
                    <fullName>Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</fullName>
                    <isActive>false</isActive>
                    <label>Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</label>
                </value>
                <value>
                    <fullName>Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</fullName>
                    <isActive>false</isActive>
                    <label>Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</label>
                </value>
                <value>
                    <fullName>EVE-Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</fullName>
                    <isActive>false</isActive>
                    <label>EVE-Cliente no qual emitimos pagamentos (Dinheiro e &quot;ou&quot; Produto).</label>
                </value>
                <value>
                    <fullName>EVE-Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</fullName>
                    <isActive>false</isActive>
                    <label>EVE-Cliente no qual emitimos pedidos de VENDA DIRETA. Ou seja, fazemos a venda de nossos produtos sem o uso de distribuidores/atacados.</label>
                </value>
                <value>
                    <fullName>EVE-Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</fullName>
                    <isActive>false</isActive>
                    <label>EVE-Cliente que apenas mantemos relação de atendimento, sem emissão de pagamentos (Em Dinheiro e &quot;ou&quot; Produtos).</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q3_Qual_o_principal_escopo_do_neg_cio__c</fullName>
        <description>Qual o principal escopo do negócio?</description>
        <inlineHelpText>Qual o principal escopo do negócio?</inlineHelpText>
        <label>Qual o principal escopo do negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q2_relacao_comercial__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atua como extensão das indústrias no desenvolvimento de marcas, canais e clientes, valorizando uma relação de médio e longo prazo. Tem uma estrutura de custos mais elevada devido ao foco em execução.</fullName>
                </value>
                <value>
                    <fullName>Atua como extensão das indústrias na distribuição dos produtos, mas com pouco ou nenhum foco em execução no ponto de venda. A principal característica é a capilaridade de distribuição, com estrutura de custos e margens reduzida</fullName>
                </value>
                <value>
                    <fullName>Esse acontecimento pode ser social, artístico ou desportivo, festas de pequeno, médio ou grande porte, que envolvem experiências diferenciadas ao público e possível vivência de marca.</fullName>
                </value>
                <value>
                    <fullName>Local onde pessoas se reunem com prioridade para efetuar uma refeição, seja em eventos de negócios ou particulares. Refeições tem maior representatividade no faturamento, bebidas é apenas complemento.</fullName>
                </value>
                <value>
                    <fullName>Local onde pessoas se reunem para relaxar, ter uma conversa, com som ambiente ou sem som, onde geralmente ficam sentadas. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>Local frequentemente mais agitado. Possui mesas, mas há boa área de circulação para interação em pé. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>Local onde pessoas se reúnem a tarde e durante a noite na busca de diversão e dançar. Música é a atração principal, em alto volume e onde, em quase todas as ocasiões, envolvem um DJ/Músicos e pista de dança.</fullName>
                </value>
                <value>
                    <fullName>Lojas em formato virtual com número amplo de categorias, sendo que a categoria de bebidas representa menos que 50% do faturamento.</fullName>
                </value>
                <value>
                    <fullName>Lojas em formato virtual com foco em um número restrito de categorias, mas que a categoria de bebidas representa mais que 50% do faturamento (Valor $$). Bebidas é a categora destino para o site.</fullName>
                </value>
                <value>
                    <fullName>Ponto de venda que oferece um modelo de negócio híbrido, voltado tanto para o comprador profissional (CNPJ) como para o consumidor final (CPF). Possui oferta de preços diferenciada para compras no varejo e no atacado</fullName>
                </value>
                <value>
                    <fullName>Produtos e serviços são vendidos através de lojas com número amplo de categorias, sendo que a categoria de bebidas representa menos que 50% do faturamento.</fullName>
                </value>
                <value>
                    <fullName>Produtos e serviços são vendidos através de lojas com foco em um número restrito de categorias, mas que a categoria de bebidas representa mais que 50% do faturamento (Valor $$). Bebidas é a categora destino para lojas.</fullName>
                </value>
                <value>
                    <fullName>São estabelecimentos comerciais voltados para diversão e entretenimento adulto, com livre manifestação da sexualidade, podendo também ter espaço para dança, socialização e venda de alimentos e bebidas.</fullName>
                </value>
                <value>
                    <fullName>Utiliza o comércio eletrônico via terceiro para operações interna, em que a organização oferece produtos ou serviços aos seus funcionários, terceiros ou empresas parceiras</fullName>
                </value>
                <value>
                    <fullName>331322-Ponto de venda que oferece um modelo de negócio híbrido, voltado tanto para o comprador profissional (CNPJ) como para o consumidor final (CPF). Possui oferta de preços diferenciada para compras no varejo e no atacado</fullName>
                </value>
                <value>
                    <fullName>331321-Ponto de venda que oferece um modelo de negócio híbrido, voltado tanto para o comprador profissional (CNPJ) como para o consumidor final (CPF). Possui oferta de preços diferenciada para compras no varejo e no atacado</fullName>
                </value>
                <value>
                    <fullName>332321-Produtos e serviços são vendidos através de lojas com número amplo de categorias, sendo que a categoria de bebidas representa menos que 50% do faturamento.</fullName>
                </value>
                <value>
                    <fullName>332322-Produtos e serviços são vendidos através de lojas com número amplo de categorias, sendo que a categoria de bebidas representa menos que 50% do faturamento.</fullName>
                </value>
                <value>
                    <fullName>333321-Produtos e serviços são vendidos através de lojas com foco em um número restrito de categorias, mas que a categoria de bebidas representa mais que 50% do faturamento (Valor $$). Bebidas é a categora destino para lojas.</fullName>
                </value>
                <value>
                    <fullName>333322-Produtos e serviços são vendidos através de lojas com foco em um número restrito de categorias, mas que a categoria de bebidas representa mais que 50% do faturamento (Valor $$). Bebidas é a categora destino para lojas.</fullName>
                </value>
                <value>
                    <fullName>131121-Atua como extensão das indústrias no desenvolvimento de marcas, canais e clientes, valorizando uma relação de médio e longo prazo. Tem uma estrutura de custos mais elevada devido ao foco em execução.</fullName>
                </value>
                <value>
                    <fullName>132121-Atua como extensão das indústrias na distribuição dos produtos, mas com pouco ou nenhum foco em execução no ponto de venda. A principal característica é a capilaridade de distribuição, com estrutura de custos e margens reduzida</fullName>
                </value>
                <value>
                    <fullName>431421-Local onde pessoas se reunem com prioridade para efetuar uma refeição, seja em eventos de negócios ou particulares. Refeições tem maior representatividade no faturamento, bebidas é apenas complemento.</fullName>
                </value>
                <value>
                    <fullName>431422-Local onde pessoas se reunem com prioridade para efetuar uma refeição, seja em eventos de negócios ou particulares. Refeições tem maior representatividade no faturamento, bebidas é apenas complemento.</fullName>
                </value>
                <value>
                    <fullName>431423-Local onde pessoas se reunem com prioridade para efetuar uma refeição, seja em eventos de negócios ou particulares. Refeições tem maior representatividade no faturamento, bebidas é apenas complemento.</fullName>
                </value>
                <value>
                    <fullName>432421-Local onde pessoas se reunem para relaxar, ter uma conversa, com som ambiente ou sem som, onde geralmente ficam sentadas. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>432422-Local onde pessoas se reunem para relaxar, ter uma conversa, com som ambiente ou sem som, onde geralmente ficam sentadas. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>432423-Local onde pessoas se reunem para relaxar, ter uma conversa, com som ambiente ou sem som, onde geralmente ficam sentadas. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>433421-Local frequentemente mais agitado. Possui mesas, mas há boa área de circulação para interação em pé. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
                <value>
                    <fullName>433422-Local frequentemente mais agitado. Possui mesas, mas há boa área de circulação para interação em pé. Bebidas tem maior representatividade em seu faturamento, tendo petiscos e refeições como complemento.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q4_Qual_a_principal_rea_abordagem__c</fullName>
        <description>Qual a principal área/abordagem de atuação do negócio?</description>
        <inlineHelpText>Qual a principal área/abordagem de atuação do negócio?</inlineHelpText>
        <label>Principal área/abord. atuação negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q3_Qual_o_principal_escopo_do_neg_cio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quando as vendas para segmento off trade são iguais ou superiores a 75%</fullName>
                </value>
                <value>
                    <fullName>Quando as vendas para segmento On Trade são iguais ou superiores a 75%</fullName>
                </value>
                <value>
                    <fullName>Quando as vendas para segmento de Eventos são iguais ou superiores a 75%</fullName>
                </value>
                <value>
                    <fullName>Quando nenhum segmento (Off Trade, On Trade ou Eventos) representa mais do que 50% das suas vendas</fullName>
                </value>
                <value>
                    <fullName>4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>1 Estado</fullName>
                </value>
                <value>
                    <fullName>EVE-1 Estado</fullName>
                </value>
                <value>
                    <fullName>EVE-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>EVE-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>OFF-1 Estado</fullName>
                </value>
                <value>
                    <fullName>OFF-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>OFF-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>ONL-1 Estado</fullName>
                </value>
                <value>
                    <fullName>ONL-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>ONL-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>B2B-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>331322-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>331322-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>331322-1 Estado</fullName>
                </value>
                <value>
                    <fullName>331321-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>331321-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>331321-1 Estado</fullName>
                </value>
                <value>
                    <fullName>332321-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>332321-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>332321-1 Estado</fullName>
                </value>
                <value>
                    <fullName>332322-4 ou + Estados</fullName>
                </value>
                <value>
                    <fullName>332322-2 ou 3 Estados</fullName>
                </value>
                <value>
                    <fullName>332322-1 Estado</fullName>
                </value>
                <value>
                    <fullName>333321-4 ou + Estados</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>q5_Qual_o_principal_p_blico__c</fullName>
        <description>Qual o principal público que se destina o negócio?</description>
        <inlineHelpText>Qual o principal público que se destina o negócio?</inlineHelpText>
        <label>Qual o principal público do negócio?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>q4_Qual_a_principal_rea_abordagem__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foco em marcas Trading Brands (low price) e Pilares. Quando trabalham com marcas importadas, são as líderes de mercado e representam menos de 5% das vendas PRB no cliente em volume.</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Pilares. Trabalham com marcas importadas líderes de mercado e alguns poucos produtos mais conhecidos. Segmento importado representa até 15% das vendas PRB no cliente em volume.</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Premium, atuando também com segmentos Super Premium e Luxo. Também trabalha com marcas standard, mas o portfólio premium é mais abrangente e representativo para o faturamento da PRB dentro do cliente.</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Pilares (Nacionais standard). Poucas marcas importadas, geralmente só as lideres de mercado e mais conhecidas.Modelo de auto serviço: Não possui Somelier nas lojasClasses C e B</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Trading Brands (Low Price).Não trabalha com marcas importadas.Modelo de auto serviço: Não possui Somelier nas lojasClasses D e E</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Premium, Super Premium e de Luxo. Tem especialista para atendimento ao cliente e trabalha com Price Point acima da média de mercado. Não adota o modelo High-Low e, em sua maioria, não trabalha com produtos confinados</fullName>
                </value>
                <value>
                    <fullName>Foco em marcas Pilares (Nacionais standard). Poucas marcas importadas, geralmente só as lideres de mercado e mais conhecidas.Classes Sociais C e B.</fullName>
                    <label>ONL-Foco em marcas Pilares (Nacionais standard). Poucas marcas importadas, geralmente só as lideres de mercado e mais conhecidas.Classes Sociais C e B.</label>
                </value>
                <value>
                    <fullName>Foco em marcas Premium (ABCJ) com Super Premium ( Vodkas e Champagnes) ainda em desenvolvimento. Sommelier não é presente em todas as lojas. Adota o Modelo High Low e atinge a Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que a casa vende é composto por marcas Nacionais e locais, mas pode ter volume considerável de marcas Premium. A brigada da casa costuma ser básica, sem muito treinamento. Classe C a D.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que a casa vende é composto por marcas Premium (líderes e mais conhecidas), mas marcas Standard também podem ser significativas. Brigada costuma ser básica, sem muito treinamento. Classe B e C.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que a casa vende é composto por marcas Premium, mas já apresenta desenvolvimento das marcas Super Premium e poucas marcas standard. Brigada possui orientação/treinamento. Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>O maior volume que a casa vende é composto por marcas S. Premium, mas já apresenta desenvolvimento de marcas Ultra Premium. São estabelecimentos de referência local ou regional, com algum diferencial entre as opções da mesma região.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que o evento vende é composto por marcas Nacionais e locais, mas pode ter volume considerável de marcas Premium. A brigada costuma ser básica, sem muito treinamento. Classe C a D.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que o evento vende é composto por marcas Premium (líderes e mais conhecidas), mas marcas Standard também podem ser significativas. Brigada costuma ser básica, sem muito treinamento. Classe B e C.</fullName>
                </value>
                <value>
                    <fullName>O maior volume de bebidas que o evento vende é composto por marcas Premium, mas já apresenta desenvolvimento das marcas Super Premium e poucas marcas standard. Brigada possui orientação/treinamento. Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>O maior volume que o evento vende é composto por marcas S. Premium, mas já apresenta desenvolvimento de marcas Ultra Premium. São eventos de referência local ou regional, com algum diferencial entre as opções da mesma região.</fullName>
                </value>
                <value>
                    <fullName>Portfólio vasto, trabalhando com diversas categorias de bens de consumo</fullName>
                </value>
                <value>
                    <fullName>Portfólio especializado na categoria de bebidas alcoólicas</fullName>
                </value>
                <value>
                    <fullName>Quando nenhum PERFIL (Popular, Standard e Premium) representa mais do que 50% das suas vendas</fullName>
                </value>
                <value>
                    <fullName>Quando o cliente tem um mix muito próximo ao da Regional de Vendas e nenhum grupo de marcas (TB, Pilares ou Premium) tem representatividade maior do que 10pp vs.média da Regional.</fullName>
                </value>
                <value>
                    <fullName>São estabelecimentos de referência nacional, com nível de serviço e entretenimento comparado a casas Internacionais. Busca oferecer ao cliente a melhor experiência, justificando o alto custo na hora de pagar a conta.</fullName>
                </value>
                <value>
                    <fullName>São eventos de referência nacional, com nível de serviço e entretenimento comparado aos Internacionais. Busca oferecer ao cliente a melhor experiência, justificando o alto custo na hora de pagar a conta.</fullName>
                </value>
                <value>
                    <fullName>ONL-Foco em marcas Premium (ABCJ) com Super Premium ( Vodkas e Champagnes) ainda em desenvolvimento. Sommelier não é presente em todas as lojas. Adota o Modelo High Low e atinge a Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>OFF-Foco em marcas Premium (ABCJ) com Super Premium ( Vodkas e Champagnes) ainda em desenvolvimento. Sommelier não é presente em todas as lojas. Adota o Modelo High Low e atinge a Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>331322-Foco em marcas Premium (ABCJ) com Super Premium ( Vodkas e Champagnes) ainda em desenvolvimento. Sommelier não é presente em todas as lojas. Adota o Modelo High Low e atinge a Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>331322-Foco em marcas Trading Brands (Low Price).Não trabalha com marcas importadas.Modelo de auto serviço: Não possui Somelier nas lojasClasses D e E</fullName>
                </value>
                <value>
                    <fullName>331322-Foco em marcas Premium, Super Premium e de Luxo. Tem especialista para atendimento ao cliente e trabalha com Price Point acima da média de mercado. Não adota o modelo High-Low e, em sua maioria, não trabalha com produtos confinados</fullName>
                </value>
                <value>
                    <fullName>331322-Foco em marcas Pilares (Nacionais standard). Poucas marcas importadas, geralmente só as lideres de mercado e mais conhecidas.Classes Sociais C e B.</fullName>
                </value>
                <value>
                    <fullName>331321-Foco em marcas Premium (ABCJ) com Super Premium ( Vodkas e Champagnes) ainda em desenvolvimento. Sommelier não é presente em todas as lojas. Adota o Modelo High Low e atinge a Classe A e B.</fullName>
                </value>
                <value>
                    <fullName>331321-Foco em marcas Trading Brands (Low Price).Não trabalha com marcas importadas.Modelo de auto serviço: Não possui Somelier nas lojasClasses D e E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>